@@ -3,7 +3,6 @@ package edu.kit.kastel.mcse.ardoco.core.recommendationgenerator.agents;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import edu.kit.kastel.mcse.ardoco.core.datastructures.InstanceRelation;
 import edu.kit.kastel.mcse.ardoco.core.datastructures.agents.Configuration;
@@ -77,58 +76,73 @@ public class InstanceRelationAgent extends DependencyAgent {
      */
     private void getRelations() {
         for (IRecommendedInstance instance : recommendationState.getRecommendedInstances()) {
-            for (IWord word : getInstanceWords(instance)) {
-                List<IWord> verbsOn = getVerbsOn(word);
-                for (IWord verbOn : verbsOn) {
-                    for (IWord secondWord : getNounDepOf(verbOn)) {
-                        if (word.getSentenceNo() != verbOn.getSentenceNo() || secondWord.getSentenceNo() != verbOn.getSentenceNo()) {
-                            // If word, verbOn and secondWord are not in the same sentence, ignore
-                            continue;
-                        }
-                        IWord from = word.getPosition() < secondWord.getPosition() ? word : secondWord;
-                        IWord to = word.getPosition() < secondWord.getPosition() ? secondWord : word;
-                        for (IRecommendedInstance secondInstance : recommendationState.getRecommendedInstances()) {
-
-                            if (getInstanceWords(secondInstance).contains(secondWord) && !instance.equals(secondInstance) && !word.equals(secondWord)) {
-                                boolean newInstance = true;
-                                for (IInstanceRelation relation : recommendationState.getInstanceRelations()) {
-                                    if (relation.isIn(verbOn, Collections.singletonList(from), Collections.singletonList(to))) {
-                                        /*
-                                         * Break loop if relation already exists
-                                         */
-                                        newInstance = false;
-                                        break;
-                                    } else if (relation.matches(instance, secondInstance)) {
-                                        /*
-                                         * Add to existing if instances match, but specific relation does not exist
-                                         * there yet
-                                         */
-                                        newInstance = false;
-                                        logger.debug("Add to existing InstanceRelation from {} over {} to {}", word.getText(), verbOn.getText(),
-                                                secondWord.getText());
-                                        relation.addLink(verbOn, Collections.singletonList(from), Collections.singletonList(to));
-                                        break;
-                                    }
-                                }
-                                if (newInstance) {
-                                    /*
-                                     * Add new relation if not found previously
-                                     */
-                                    logger.debug("Add new InstanceRelation from {} over {} to {}", word.getText(), verbOn.getText(), secondWord.getText());
-                                    recommendationState.addInstanceRelation(instance, secondInstance, verbOn, Collections.singletonList(from),
-                                            Collections.singletonList(to));
-                                }
-                            }
-                        }
-                    }
-                }
-            }
+            processRecommendedInstance(instance);
         }
 
         logger.info("Found {} InstanceRelations", recommendationState.getInstanceRelations().size());
     }
 
-    private List<IWord> getInstanceWords(IRecommendedInstance instance) {
+    private void processRecommendedInstance(IRecommendedInstance instance) {
+        for (IWord word : getInstanceWords(instance)) {
+            processVersOn(instance, word);
+        }
+    }
+
+    private void processVersOn(IRecommendedInstance instance, IWord word) {
+        for (IWord verbOn : getVerbsOn(word)) {
+            for (IWord secondWord : getNounDepOf(verbOn)) {
+                if (word.getSentenceNo() != verbOn.getSentenceNo() || secondWord.getSentenceNo() != verbOn.getSentenceNo()) {
+                    // If word, verbOn and secondWord are not in the same sentence, ignore
+                    continue;
+                }
+                IWord from = word.getPosition() < secondWord.getPosition() ? word : secondWord;
+                IWord to = word.getPosition() < secondWord.getPosition() ? secondWord : word;
+                processWithSecondInstance(instance, word, verbOn, secondWord, from, to);
+            }
+        }
+    }
+
+    private void processWithSecondInstance(IRecommendedInstance instance, IWord word, IWord verbOn, IWord secondWord, IWord from, IWord to) {
+        for (IRecommendedInstance secondInstance : recommendationState.getRecommendedInstances()) {
+
+            if (getInstanceWords(secondInstance).contains(secondWord) && !instance.equals(secondInstance) && !word.equals(secondWord)) {
+                boolean newInstance = checkForNewInstance(instance, word, verbOn, secondWord, from, to, secondInstance);
+                if (newInstance) {
+                    /*
+                     * Add new relation if not found previously
+                     */
+                    logger.debug("Add new InstanceRelation from {} over {} to {}", word.getText(), verbOn.getText(), secondWord.getText());
+                    recommendationState.addInstanceRelation(instance, secondInstance, verbOn, Collections.singletonList(from), Collections.singletonList(to));
+                }
+            }
+        }
+    }
+
+    private boolean checkForNewInstance(IRecommendedInstance instance, IWord word, IWord verbOn, IWord secondWord, IWord from, IWord to,
+            IRecommendedInstance secondInstance) {
+        boolean newInstance = true;
+        for (IInstanceRelation relation : recommendationState.getInstanceRelations()) {
+            if (relation.isIn(verbOn, Collections.singletonList(from), Collections.singletonList(to))) {
+                /*
+                 * Break loop if relation already exists
+                 */
+                newInstance = false;
+            } else if (relation.matches(instance, secondInstance)) {
+                /*
+                 * Add to existing if instances match, but specific relation does not exist there yet
+                 */
+                newInstance = false;
+                logger.debug("Add to existing InstanceRelation from {} over {} to {}", word.getText(), verbOn.getText(), secondWord.getText());
+                relation.addLink(verbOn, Collections.singletonList(from), Collections.singletonList(to));
+            }
+            if (!newInstance) {
+                break;
+            }
+        }
+        return newInstance;
+    }
+
+    private static List<IWord> getInstanceWords(IRecommendedInstance instance) {
         List<IWord> words = new ArrayList<>();
         for (INounMapping mapping : instance.getNameMappings()) {
             words.addAll(mapping.getWords().castToList());
@@ -136,24 +150,24 @@ public class InstanceRelationAgent extends DependencyAgent {
         return words;
     }
 
-    private List<IWord> getVerbsOn(IWord word) {
+    private static List<IWord> getVerbsOn(IWord word) {
         // TODO isVerb access via class compatible with their jv version?
-        return getNounDepOn(word).stream().filter(WordHelper::isVerb).collect(Collectors.toList());
+        return getNounDepOn(word).stream().filter(WordHelper::isVerb).toList();
     }
 
-    private List<IWord> getNounDepOn(IWord word) {
+    private static List<IWord> getNounDepOn(IWord word) {
         List<IWord> dependencies = new ArrayList<>();
         dependencies.addAll(word.getWordsThatAreDependentOnThis(DependencyTag.OBJ).castToList());
         dependencies.addAll(word.getWordsThatAreDependentOnThis(DependencyTag.NSUBJ).castToList());
         return dependencies;
     }
 
-    private List<IWord> getVerbsOf(IWord word) {
+    private static List<IWord> getVerbsOf(IWord word) {
         // TODO isVerb access via class compatible with their jv version?
-        return getNounDepOf(word).stream().filter(WordHelper::isVerb).collect(Collectors.toList());
+        return getNounDepOf(word).stream().filter(WordHelper::isVerb).toList();
     }
 
-    private List<IWord> getNounDepOf(IWord word) {
+    private static List<IWord> getNounDepOf(IWord word) {
         List<IWord> dependencies = new ArrayList<>();
         dependencies.addAll(word.getWordsThatAreDependencyOfThis(DependencyTag.OBJ).castToList());
         dependencies.addAll(word.getWordsThatAreDependencyOfThis(DependencyTag.NSUBJ).castToList());
